<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#607d8b">

    <ImageView android:id="@+id/iv_logo"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/steam"/>

    <EditText android:id="@+id/et_names"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="#212121"
        android:hint="@string/et_nombres"
        android:textColorHint="#1a237e"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-condensed"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"/>

    <EditText android:id="@+id/et_apellidos"
        android:padding="20dp"
        android:textColor="#212121"
        android:textSize="20sp"
        android:textColorHint="#1a237e"
        android:hint="@string/et_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@+id/et_names"/>

    <EditText android:id="@+id/et_correo"
        android:textColorHint="#1a237e"
        android:textColor="#212121"
        android:padding="20dp"
        android:textSize="20sp"
        android:hint="@string/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@+id/et_apellidos"/>

    <EditText android:id="@+id/et_usuario"
        android:padding="20dp"
        android:textColor="#212121"
        android:textSize="20sp"
        android:hint="@string/et_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#1a237e"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@+id/et_correo"/>

    <EditText android:id="@+id/et_password"
        android:inputType="textPassword"
        android:fontFamily="sans-serif-condensed"
        android:textColorHint="#1a237e"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="#212121"
        android:hint="@string/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_usuario"/>

    <Button android:id="@+id/btn_guardar"
        android:text="@string/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#212121"
        android:background="#a7ffeb"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
